--- a/quote-generator/style.css
+++ b/quote-generator/style.css
@@ -88,3 +88,13 @@ body {
     margin: 5px;
     cursor: pointer;
 }
+
+.quote-box button img {
+    width: 20px;
+    margin-right: 10px;
+}
+
+.quote-box button:nth-child(2){
+    background: transparent;
+    color: #333;
+}
