--- a/digital-clock/style.css
+++ b/digital-clock/style.css
@@ -5,10 +5,6 @@
     font-family: monospace;
 }
 
-/* body {
-    background: linear-gradient(45deg, #5558DA, #5FD1F9);
-} */
-
 .hero {
     width: 100%;
     height: 100vh;
@@ -34,4 +30,29 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    backdrop-filter: blur(40px);
+}
+
+.container::before {
+    content: '';
+    width: 180px;
+    height: 180px;
+    background: #f41b75;
+    border-radius: 5px;
+    position: absolute;
+    left: -50px;
+    top: -50px;
+    z-index: -1;
+}
+
+.container::after {
+    content: '';
+    width: 180px;
+    height: 180px;
+    background: #419aff;
+    border-radius: 50%;
+    position: absolute;
+    right: -30px;
+    bottom: -50px;
+    z-index: -1;
 }
