--- a/digital-clock/style.css
+++ b/digital-clock/style.css
@@ -56,3 +56,31 @@
     bottom: -50px;
     z-index: -1;
 }
+
+.clock span {
+    font-size: 80px;
+    width: 110px;
+    display: inline-block;
+    text-align: center;
+    position: relative;
+}
+
+.clock span::after {
+    font-size: 16px;
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#hours::after {
+    content: 'Hours';
+}
+
+#minutes::after {
+    content: 'Minutes';
+}
+
+#seconds::after {
+    content: 'Seconds';
+}
