--- a/quote-generator/style.css
+++ b/quote-generator/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
@@ -8,12 +8,13 @@
 }
 
 body {
-    background: #bbc6fa;
+    background: #121212;
 }
 
 .quote-box {
-    background-color: #fff;
-    width: 700px;
+    background-color: #1E1E2F;
+    color: #E0E0E0;
+    width: 900px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -76,8 +77,10 @@ body {
 }
 
 .quote-box button {
-    background: rgb(23, 124, 229);
-    color: #fff;
+    font-family: "Poppins", sans-serif;
+    background: #1DA1F2;
+    font-size: 0.9rem;
+    color: #E0E0E0;
     border-radius: 25px;
     border: 1px solid rgb(23, 124, 229);
     width: 150px;
@@ -89,12 +92,21 @@ body {
     cursor: pointer;
 }
 
+.quote-box button:hover {
+    background-color: #0D8BF0;
+}
+
 .quote-box button img {
     width: 40px;
     margin-right: 10px;
 }
 
 .quote-box button:nth-child(2){
-    background: transparent;
-    color: #333;
+    background: #E0E0E0;
+    color: black;
+}
+
+.quote-box button:nth-child(2):hover{
+    background: #E0E0E0;
+    color: black;
 }
