--- a/portfolio-welcome-page/style.css
+++ b/portfolio-welcome-page/style.css
@@ -6,3 +6,31 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header {
+    background-color: yellow;
+    width: 100%;
+    height: 80px;
+    position: fixed;
+    max-width: 800px;
+}
+
+main {
+    background-color: green;
+    width: 100%;
+    min-height: 90dvh;
+    max-width: 800px;
+}
+
+footer {
+    background-color: purple;
+    width: 100%;
+    min-height: 10dvh;
+    max-width: 800px;
+}
