--- a/portfolio-welcome-page/style.css
+++ b/portfolio-welcome-page/style.css
@@ -13,23 +13,55 @@ body {
     align-items: center;
 }
 
+/* START HEADER */
+
 header {
-    background-color: yellow;
+    /* background-color: yellow; */
     width: 100%;
     height: 80px;
     position: fixed;
     max-width: 800px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 50px;
 }
 
+.logo span {
+    color: #00CBD4;
+}
+
+.list-menu {
+    display: flex;
+    gap: 2rem;
+}
+
+.list-menu li {
+    list-style: none;
+}
+
+.list-menu li a {
+    text-decoration: none;
+    font-weight: 600;
+    color: black;
+    transition: 0.3s;
+}
+
+.list-menu li a:hover {
+    color: #00CBD4;
+}
+
+/* END HEADER */
+
 main {
-    background-color: green;
+    /* background-color: green; */
     width: 100%;
     min-height: 90dvh;
     max-width: 800px;
 }
 
 footer {
-    background-color: purple;
+    /* background-color: purple; */
     width: 100%;
     min-height: 10dvh;
     max-width: 800px;
