--- a/portfolio-welcome-page/style.css
+++ b/portfolio-welcome-page/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root {
+    --main-blue: #00CBD4;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -28,7 +32,7 @@ header {
 }
 
 .logo span {
-    color: #00CBD4;
+    color: var(--main-blue);
 }
 
 .list-menu {
@@ -48,7 +52,11 @@ header {
 }
 
 .list-menu li a:hover {
-    color: #00CBD4;
+    color: var(--main-blue);
+}
+
+.list-menu li .active {
+    color: var(--main-blue);
 }
 
 /* END HEADER */
