--- a/portfolio-welcome-page/style.css
+++ b/portfolio-welcome-page/style.css
@@ -77,6 +77,15 @@ main {
     align-items: center;
 }
 
+main::before {
+    content: '';
+    position: absolute;
+    width: 4px;
+    height: 80px;
+    background-color: var(--main-blue);
+    margin-left: -30px;
+}
+
 .role-text {
     color: var(--main-blue);
 }
@@ -92,6 +101,18 @@ main {
     border-radius: 12px;
     font-weight: 600;
     cursor: pointer;
+}
+
+.list-button .download-cv {
+    border: none;
+    background-color: var(--main-blue);
+    color: white;
+    box-shadow: 4px 4px 10px var(--main-blue);
+}
+
+.list-button .contact-me {
+    background-color: white;
+    border: 2px solid var(--main-blue);
 }
 
 .right {
