--- a/portfolio-welcome-page/style.css
+++ b/portfolio-welcome-page/style.css
@@ -32,6 +32,13 @@ header {
     padding: 0 50px;
 }
 
+.logo {
+    animation: showUp 0.7s forwards;
+    animation-delay: 0.3s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
 .logo span {
     color: var(--main-blue);
 }
@@ -43,6 +50,14 @@ header {
 
 .list-menu li {
     list-style: none;
+
+    animation: showUp 0.7s forwards;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+.list-menu li:nth-child(1) {
+    animation-delay: 0.3s;
 }
 
 .list-menu li a {
@@ -161,3 +176,14 @@ footer a i:hover {
 }
 
 /* END FOOTER */
+
+/* START ANIMATION */
+
+@keyframes showUp {
+    to {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+/* END ANIMATION */
