--- a/portfolio-welcome-page/style.css
+++ b/portfolio-welcome-page/style.css
@@ -57,7 +57,19 @@ header {
 }
 
 .list-menu li:nth-child(1) {
-    animation-delay: 0.3s;
+    animation-delay: 0.5s;
+}
+
+.list-menu li:nth-child(2) {
+    animation-delay: 0.7s;
+}
+
+.list-menu li:nth-child(3) {
+    animation-delay: 0.9s;
+}
+
+.list-menu li:nth-child(4) {
+    animation-delay: 1.1s;
 }
 
 .list-menu li a {
@@ -101,8 +113,26 @@ main::before {
     margin-left: -30px;
 }
 
+.hello-text {
+    animation: showUp 0.7s forwards;
+    animation-delay: 1s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+.name-text {
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.2s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
 .role-text {
     color: var(--main-blue);
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.4s;
+    opacity: 0;
+    transform: translateY(20px);
 }
 
 .list-button {
@@ -123,11 +153,21 @@ main::before {
     background-color: var(--main-blue);
     color: white;
     box-shadow: 4px 4px 10px var(--main-blue);
+
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.6s;
+    opacity: 0;
+    transform: translateY(20px);
 }
 
 .list-button .contact-me {
     background-color: white;
     border: 2px solid var(--main-blue);
+
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.8s;
+    opacity: 0;
+    transform: translateY(20px);
 }
 
 .right {
