--- a/portfolio-welcome-page/style.css
+++ b/portfolio-welcome-page/style.css
@@ -111,6 +111,9 @@ main::before {
     height: 80px;
     background-color: var(--main-blue);
     margin-left: -30px;
+
+    animation: showHeight80px 1.5s ease-in-out forwards;
+    animation-delay: 2.5s;
 }
 
 .hello-text {
@@ -187,7 +190,9 @@ main::before {
     position: absolute;
     left: 0;
 
-    animation: showRight 2s ease forwards;
+    animation:
+     showRight 2s ease forwards,
+     bouncing 3s ease-in-out alternate-reverse infinite;
     animation-delay: 2.2s;
     opacity: 0;
     margin-left: 20px;
@@ -262,6 +267,20 @@ footer a i:hover {
     to {
         opacity: 1;
         margin-left: 0px;
+    }
+}
+
+@keyframes showHeight80px {
+    to {
+        height: 80px;
+    }
+}
+
+@keyframes bouncing {
+    from {
+        transform: translateY(0px);
+    } to {
+        transform: translateY(20px);
     }
 }
 
