--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -30,6 +30,7 @@ main {
     display: flex;
     width: 235px;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 30px;
 }
 
@@ -101,6 +102,7 @@ main {
     font-size: 16px;
     cursor: pointer;
     transition: 0.3s background;
+    visibility: hidden;
 }
 
 #restartBtn:hover {
