--- a/rock-paper-scissor/style.css
+++ b/rock-paper-scissor/style.css
@@ -1,8 +1,112 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* :root {
+    --main-yellow: #FFD55D;
+} */
+
 * {
     font-family: "Poppins", sans-serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+body {
+    background-color: linear-gradient(180deg, white, #F2F2F2);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main {
+    background-color: white;
+    width: 450px;
+    padding: 32px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 24px;
+    margin: 16px;
+}
+
+.main-header {
+    /* border: solid; */
+    background-color: #FFD55D;
+    padding: 12px;
+    border-radius: 24px;
+    text-align: center;
+    border: solid 4px #FFEDB9;
+}
+
+.results-display {
+    display: flex;
+    justify-content: space-between;
+    padding: 24px;
+    align-items: center;
+}
+
+.player-choice-text, .cpu-choice-text {
+    font-size: 80px;
+}
+
+.player-choice-text {
+    transform: rotate(90deg) rotateY(180deg);
+}
+
+.cpu-choice-text {
+    transform: rotate(-90deg);
+}
+
+.versus-text {
+    font-size: 32px;
+    color: #D9D9D9;
+}
+
+.score-board {
+    display: flex;
+    justify-content: space-around;
+}
+
+.score-board h4 {
+    font-weight: 600;
+}
+
+.divider-vertical {
+    width: 2px;
+}
+
+.options-choice {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 24px;
+}
+
+.options-choice:hover .option-wrapper:not(:hover) {
+    opacity: 0.5;
+    transform: scale(0.9);
+}
+
+.option-wrapper {
+    transition: 0.3s;
+}
+
+.choice-btn {
+    width: 100px;
+    height: 70px;
+    border-radius: 99px;
+    background: none;
+    border: solid 2px #F2F2F2;
+    font-size: 32px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.choice-btn:hover {
+    background-color: #E0E0E0;
+}
+
+.choice-label {
+    text-align: center;
+    margin-top: 8px;
+    font-weight: 600;
 }
