--- a/rock-paper-scissor/style.css
+++ b/rock-paper-scissor/style.css
@@ -47,14 +47,23 @@ main {
 
 .player-choice-text, .cpu-choice-text {
     font-size: 80px;
+    position: relative;
 }
 
 .player-choice-text {
     transform: rotate(90deg) rotateY(180deg);
 }
 
+.player-choice-text-anim {
+    animation: player-shake-result 0.4s ease alternate infinite;
+}
+
 .cpu-choice-text {
     transform: rotate(-90deg);
+}
+
+.cpu-choice-text-anim {
+    animation: cpu-shake-result 0.4s ease alternate infinite;
 }
 
 .versus-text {
@@ -110,3 +119,28 @@ main {
     margin-top: 8px;
     font-weight: 600;
 }
+
+@keyframes player-shake-result {
+    from {
+        bottom: 5px;
+        rotate: -5deg;
+    } 
+    
+    to {
+        bottom: -5px;
+        rotate: 5deg;
+    }
+}
+
+@keyframes cpu-shake-result {
+    from {
+        bottom: 5px;
+        rotate: 5deg;
+    } 
+    
+    to {
+        bottom: -5px;
+        rotate: -5deg;
+    }
+}
+
