--- a/calculator/style.css
+++ b/calculator/style.css
@@ -9,4 +9,87 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    color: white;
+}
+
+body {
+    background: url('assets/windows-dark.jpg');
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    background-color: linear-gradient(to top, rgb(0, 0, 0, 0.15), rgb(255, 255, 255, 0.15));
+    backdrop-filter: blur(25px);
+    padding: 16px;
+    border-radius: 16px;
+    box-shadow: 0px 0px 20px 10px rgb(0, 0, 0, 0.25);
+}
+
+.screen {
+    height: 140px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: center;
+}
+
+.screen .calculate {
+    font-weight: 600;
+    font-size: 32px;
+}
+
+.screen .result {
+    font-size: 24px;
+    color: rgb(255, 255, 255, 0.75);
+}
+
+.button-box {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 12px;
+}
+
+.button-box button {
+    width: 50px;
+    height: 50px;
+    background: rgb(255, 255, 255, 0.15);
+    border: none;
+    border-radius: 99px;
+    font-size: 24px;
+    cursor: pointer;
+    font-weight: 500;
+    transition: 0.3s;
+}
+
+.button-box button:hover {
+    transform: scale(0.95);
+    background-color: rgb(255, 255, 255, 0.25);
+}
+
+.button-box .operator-btn {
+    background-color: rgb(0, 0, 0, 0.15) !important;
+    font-weight: 600 !important;
+}
+
+.button-box .operator-btn:hover {
+    background-color: rgb(0, 0, 0, 0.25) !important;
+}
+
+.button-box .letter-btn {
+    font-size: 16px;
+}
+
+.button-box .nol-btn {
+    grid-column: 1 / span 2;
+    width: 100%;
+}
+
+.button-box .result-btn {
+    background-color: #209CFE !important;
 }
