--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -5,8 +5,8 @@
     --primary-color: #2A7F62; /* Deep Ocean Blue (X Player) */
     --secondary-color: #E67E22; /* Warm Sunset Orange (O Player) */
     --cell-bg-color: #FFFFFF; /* Soft White */
-    --cell-hover-color: #B1C29E; /* Light Green */
-    --header-bg-color: #A3D9C5; /* Muted Teal */
+    --cell-hover-color: #A3D9C5; /* Light Green */ 
+    --header-bg-color: #AEEA94; /* Muted Teal */
     --button-bg-color: #E67E22; /* Sunset Orange */
     --text-color: #2C3E50; /* Dark Charcoal */
 }
@@ -38,6 +38,11 @@ main {
     background-color: var(--header-bg-color);
     padding: 12px;
     border-radius: 15px;
+
+    animation: showUp 0.7s forwards;
+    animation-delay: 0.7s;
+    opacity: 0;
+    transform: translateY(20px);
 }
 
 #header .player {
@@ -119,8 +124,6 @@ main {
     text-transform: uppercase;
 }
 
-/* box-shadow: 0px 0px 8px var(--win-highlight-color); */
-
 #restartBtn:hover {
     background-color: #D2665A;
 }
@@ -131,4 +134,78 @@ main {
     color: var(--text-color);
     text-align: center;
     text-transform: uppercase;
+}
+
+/* CELL ANIMATION */
+
+#cell-1 {
+    animation: showUp 0.7s forwards;
+    animation-delay: 0.9s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#cell-2 {
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.1s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#cell-3 {
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.3s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#cell-4 {
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.5s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#cell-5 {
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.7s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#cell-6 {
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.9s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#cell-7 {
+    animation: showUp 0.7s forwards;
+    animation-delay: 2.1s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#cell-8 {
+    animation: showUp 0.7s forwards;
+    animation-delay: 2.3s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#cell-9 {
+    animation: showUp 0.7s forwards;
+    animation-delay: 2.5s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+/* ANIMATION */
+
+@keyframes showUp {
+    to {
+        opacity: 1;
+        transform: translateY(0px);
+    }
 }
