--- a/to-do-list-app/style.css
+++ b/to-do-list-app/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: #788CDE;
-    --secondary-color: #50E3C2;
+    --secondary-color: #788CDE;
     --background-gradient: #212121;
     --card-bg: #1C1C1C;
     --text-color: #EAEAEA;
