--- a/to-do-list-app/style.css
+++ b/to-do-list-app/style.css
@@ -60,7 +60,7 @@
     padding: 10px;
     border-radius: 12px;
     margin-bottom: 25px;
-    border: 1px solid var(--input-border);
+    /* border: 1px solid var(--input-border); */
 }
 
 .row:hover {
@@ -100,11 +100,12 @@ ul li {
     user-select: none;
     cursor: pointer;
     position: relative;
-    border-bottom: 1px solid var(--input-border);
+    /* border-bottom: 1px solid var(--input-border); */
     transition: 0.3s;
     color: var(--text-color);
     background: var(--input-bg);
     border-radius: 12px;
+    margin-top: 8px;
 }
 
 ul li:last-child {
