--- a/to-do-list-app/style.css
+++ b/to-do-list-app/style.css
@@ -44,6 +44,8 @@
     color: var(--primary-color);
     display: flex;
     align-items: center;
+    text-align: center;
+    justify-content: center;
     margin-bottom: 20px;
 }
 
