--- a/digital-clock/style.css
+++ b/digital-clock/style.css
@@ -5,10 +5,18 @@
     font-family: 'Courier New', monospace;
 }
 
+:root {
+    --primary-color: #121212; /* Very Dark Grey/Black */
+    --secondary-color: #1a1a2e; /* Dark Navy Blue */
+    --accent-color: #e7008a; /* Dark Magenta/Pink */
+    --text-color: #ffffff; /* White */
+    --highlight-color: #9c9c9c; /* Soft Gray */
+}
+
 body {
     height: 100vh;
     margin: 0;
-    background: #020024;
+    background: var(--primary-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,17 +28,23 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: gradientAnimation 20s ease-in-out infinite;
-    background: linear-gradient(to right, #090979, #00d4ff);
-    background-size: 400% 400%;  /* Ensure the background size is large enough for the animation */
+    animation: gradientAnimation 10s ease-in-out infinite;
+    background: linear-gradient(to right, var(--primary-color), var(--secondary-color), var(--primary-color), var(--secondary-color));
+    background-size: 400% 400%; /* Ensures smoother transitions */
 }
 
 @keyframes gradientAnimation {
     0% {
         background-position: 0% 50%;
     }
+    25% {
+        background-position: 25% 50%;
+    }
     50% {
-        background-position: 100% 50%;
+        background-position: 50% 50%;
+    }
+    75% {
+        background-position: 75% 50%;
     }
     100% {
         background-position: 0% 50%;
@@ -53,6 +67,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-bottom: 24px;
     backdrop-filter: blur(30px);
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
 }
@@ -61,7 +76,7 @@ body {
     content: '';
     width: 150px;
     height: 150px;
-    background: #f41b75;
+    background: var(--accent-color);
     border-radius: 50%;
     position: absolute;
     left: -40px;
@@ -73,7 +88,7 @@ body {
     content: '';
     width: 150px;
     height: 150px;
-    background: #419aff;
+    background: var(--secondary-color);
     border-radius: 50%;
     position: absolute;
     right: -40px;
@@ -83,7 +98,7 @@ body {
 
 .clock span {
     font-size: 90px;
-    color: #fff;
+    color: var(--text-color);
     width: 120px;
     display: inline-block;
     text-align: center;
@@ -94,11 +109,11 @@ body {
 .clock span::after {
     font-size: 16px;
     position: absolute;
-    bottom: -25px;  /* Adjusted spacing to ensure labels are visible */
+    bottom: -25px;
     left: 50%;
     transform: translateX(-50%);
-    color: #ccc;
-    z-index: 1; /* Make sure the labels are above the clock digits */
+    color: var(--highlight-color);
+    z-index: 1;
 }
 
 #hours::after {
