--- a/calculator/style.css
+++ b/calculator/style.css
@@ -112,3 +112,30 @@ body {
 .button-box .result-btn {
     background-color: var(--result-bg-color) !important;
 }
+
+/* Media Responsive */
+@media (max-width: 900px) {
+    .container {
+        padding: 20px;
+        border-radius: 20px;
+    }
+
+    .screen {
+        height: 150px;
+    }
+
+    .button-box {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 10px;
+    }
+
+    .button-box button {
+        width: 60px;
+        height: 60px;
+        font-size: 28px;
+    }
+
+    .button-box .letter-btn {
+        font-size: 16px;
+    }
+}
