--- a/rock-paper-scissor/style.css
+++ b/rock-paper-scissor/style.css
@@ -156,3 +156,16 @@ main {
 .game-title {
     font-size: 24px;
 }
+
+.player-choice-container, .cpu-choice-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.player-label, .cpu-label {
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 8px;
+    color: var(--text-color);
+}
