--- a/rock-paper-scissor/style.css
+++ b/rock-paper-scissor/style.css
@@ -44,6 +44,11 @@ main {
     font-size: 24px;
     color: #fff;
     font-weight: 700;
+
+    animation: showUp 0.7s forwards;
+    animation-delay: 0.3s;
+    opacity: 0;
+    transform: translateY(20px);
 }
 
 .results-display {
@@ -58,6 +63,11 @@ main {
     font-size: 28px;
     color: var(--accent);
     font-weight: bold;
+    
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.0s;
+    opacity: 0;
+    transform: translateY(20px);
 }
 
 .score-board {
@@ -67,6 +77,11 @@ main {
     padding: 12px;
     border-radius: 8px;
     margin: 16px 0;
+
+    animation: showUp 0.7s forwards;
+    animation-delay: 0.9s;
+    opacity: 0;
+    transform: translateY(20px);
 }
 
 .score-board h4 {
@@ -163,6 +178,20 @@ main {
     align-items: center;
 }
 
+.player-choice-container {
+    animation: showUp 0.7s forwards;
+    animation-delay: 0.5s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+.cpu-choice-container {
+    animation: showUp 0.7s forwards;
+    animation-delay: 0.7s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
 .player-label, .cpu-label {
     font-size: 18px;
     font-weight: 600;
@@ -170,7 +199,37 @@ main {
     color: var(--text-color);
 }
 
-/* MEDIA RESPONSIVE */
+#option-rock {
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.1s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#option-paper {
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.3s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#option-scissors {
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.5s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+/* ANIMATION */
+
+@keyframes showUp {
+    to {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+/* MEDIA QUERY */
 
 @media (max-width: 768px) {
     main {
