--- a/digital-clock/style.css
+++ b/digital-clock/style.css
@@ -128,7 +128,51 @@ body {
     content: 'Seconds';
 }
 
-/* Responsive Design */
+#hours {
+    animation: showUp 0.7s forwards;
+    animation-delay: 0.3s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#divider-1 {
+    animation: showUp 0.7s forwards;
+    animation-delay: 0.5s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#minutes {
+    animation: showUp 0.7s forwards;
+    animation-delay: 0.7s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#divider-2 {
+    animation: showUp 0.7s forwards;
+    animation-delay: 0.9s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+#seconds {
+    animation: showUp 0.7s forwards;
+    animation-delay: 1.1s;
+    opacity: 0;
+    transform: translateY(20px);
+}
+
+/* ANIMATION */
+
+@keyframes showUp {
+    to {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+/* MEDIA QUERY */
 @media (max-width: 768px) {
     .clock span {
         font-size: 70px;
