--- a/to-do-list-app/style.css
+++ b/to-do-list-app/style.css
@@ -193,3 +193,43 @@ ul li span:hover {
     }
 }
 
+/* MEDIA QUERY */
+
+@media (max-width: 768px) {
+    .container {
+        padding: 20px;
+    }
+
+    .todo-app {
+        width: 100%;
+        padding: 30px 20px;
+    }
+
+    #title {
+        font-size: 24px;
+    }
+
+    .row {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .row input {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    button {
+        width: 100%;
+        padding: 12px 0;
+    }
+
+    ul li {
+        font-size: 16px;
+        padding: 12px 8px 12px 40px;
+    }
+
+    ul li span {
+        font-size: 18px;
+    }
+}
